2010-11-18  Richard Guenther  <rguenther@suse.de>

PR lto/45089
	* dwarf2out.c (add_AT_die_ref): Work around LTO losing types
	when checking is not enabled.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@166904 138bc75d-0d04-0410-961f-82ee72b054a4